kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aquarium-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: aquarium.appdomain.konst.fish
    http:
      paths:
      - path: /sprites/v1
        pathType: Prefix
        backend:
          service:
            name: sprite-service
            port:
              number: 4001
      - path: /tetra/v1
        pathType: Prefix
        backend:
          service:
            name: sprite-service
            port:
              number: 4001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
